--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,7 +20,7 @@ jobs:
           go-version: "1.19.13"
 
       - name: Setup GCC
-        uses: gcc:8.1.0
+        uses: gcc@8.1.0
 
       - run: go version
       - run: gcc --version
@@ -39,7 +39,7 @@ jobs:
           go-version: "1.19.13"
 
       - name: Setup GCC
-        uses: gcc:8.1.0
+        uses: gcc@8.1.0
 
       - run: go version
       - run: gcc --version
@@ -58,7 +58,7 @@ jobs:
           go-version: "1.19.13"
 
       - name: Setup GCC
-        uses: gcc:8.1.0
+        uses: gcc@8.1.0
 
       - run: go version
       - run: gcc --version
