--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,8 +19,10 @@ jobs:
         with:
           go-version: "1.19.13"
 
-      - name: Setup GCC
-        uses: gcc@8.1.0
+      - name: Set up GCC
+        uses: egor-tensin/setup-gcc@v1
+        with:
+          version: 8.1.0
 
       - run: go version
       - run: gcc --version
@@ -38,8 +40,10 @@ jobs:
         with:
           go-version: "1.19.13"
 
-      - name: Setup GCC
-        uses: gcc@8.1.0
+      - name: Set up GCC
+        uses: egor-tensin/setup-gcc@v1
+        with:
+          version: 8.1.0
 
       - run: go version
       - run: gcc --version
@@ -57,8 +61,10 @@ jobs:
         with:
           go-version: "1.19.13"
 
-      - name: Setup GCC
-        uses: gcc@8.1.0
+      - name: Set up GCC
+        uses: egor-tensin/setup-gcc@v1
+        with:
+          version: 8.1.0
 
       - run: go version
       - run: gcc --version
