--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,9 +20,10 @@ jobs:
           go-version: "1.19.13"
 
       - name: Set up GCC
-        uses: egor-tensin/setup-gcc@v1
+        uses: egor-tensin/setup-mingw@v2
         with:
-          version: 8.1.0
+          version: 8
+          platform: x64
 
       - run: go version
       - run: gcc --version
@@ -43,7 +44,8 @@ jobs:
       - name: Set up GCC
         uses: egor-tensin/setup-gcc@v1
         with:
-          version: 8.1.0
+          version: 8
+          platform: x64
 
       - run: go version
       - run: gcc --version
@@ -64,7 +66,8 @@ jobs:
       - name: Set up GCC
         uses: egor-tensin/setup-gcc@v1
         with:
-          version: 8.1.0
+          version: 8
+          platform: x64
 
       - run: go version
       - run: gcc --version
