--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,11 +10,13 @@ jobs:
     runs-on: windows-latest
     steps:
       # 下载源码
-      - name: Checkout code
+      - name: Checkout Code
+        id: CheckoutCode
         uses: actions/checkout@v2
 
       # 打包构建 Server
       - name: Setup Go
+        id: SetupGo
         uses: actions/setup-go@v2
         with:
           go-version: "1.19.13"
@@ -26,17 +28,19 @@ jobs:
 
       - run: go version
       - run: gcc --version
-      - run: echo '${{ steps.setupGCC.outputs.cc }}'
+      - run: C:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\bin\gcc.exe --version
 
   buildLinux:
     runs-on: ubuntu-latest
     steps:
       # 下载源码
-      - name: Checkout code
+      - name: Checkout Code
+        id: CheckoutCode
         uses: actions/checkout@v2
 
       # 打包构建 Server
-      - name: Build Server
+      - name: Setup Go
+        id: SetupGo
         uses: actions/setup-go@v2
         with:
           go-version: "1.19.13"
@@ -48,11 +52,13 @@ jobs:
     runs-on: macos-latest
     steps:
       # 下载源码
-      - name: Checkout code
+      - name: Checkout Code
+        id: CheckoutCode
         uses: actions/checkout@v2
 
       # 打包构建 Server
-      - name: Build Server
+      - name: Setup Go
+        id: SetupGo
         uses: actions/setup-go@v2
         with:
           go-version: "1.19.13"
